--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -5,7 +5,7 @@
   --clash: "Clash Display", sans-serif;
   --dark-primary: #2a254b;
   --primary: #4e4d93;
-  --lightgray: #f9f9f9;
+  --lightgray: #ececec;
   --border-grey: #ebe8f4;
   --border-dark: #cac6da;
 }
