--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -22,6 +22,12 @@ body {
   font-size: 16px;
   color: #22202e;
 }
+.pt-nav{
+  padding-top: 142px;
+  @media screen and (max-width: 767px) {
+    padding-top: 62px;
+  }
+}
 
 b {
   font-weight: bold;
